--- a/public/css/index.css
+++ b/public/css/index.css
@@ -298,7 +298,7 @@ input:checked+.slider:before{
 }
 .dapp_name span:last-of-type{
     position:relative;
-    padding-top:12px;
+    /* padding-top:12px; */
     font-size:12px;
     color:#383737;
     display:table
